# robotiq_2f_gripper_ros2

./: README.md
robotiq_2f_gripper_hardware/: CMakeLists.txt  package.xml
robotiq_2f_gripper_hardware/config/: config.yml  gripper_controllers.yaml
robotiq_2f_gripper_hardware/include/robotiq_2f_gripper_hardware/: robotiq_2f_gripper_node.hpp
robotiq_2f_gripper_hardware/launch/: robotiq_2f_gripper_launch.py  robotiq_2f_gripper_ros2_control.launch.py
robotiq_2f_gripper_hardware/src/: config_loader.cpp  robotiq_2f_gripper_node.cpp
robotiq_2f_gripper_hardware/urdf/: robotiq_2f_gripper_standalone.urdf.xacro
robotiq_2f_gripper_interfaces/: CMakeLists.txt
robotiq_2f_gripper_interfaces/include/robotiq_2f_gripper_interfaces/: hardware_interface.hpp
robotiq_2f_gripper_interfaces/src/: hardware_interface.cpp
robotiq_2f_gripper_interfaces/urdf/: robotiq_2f_140.ros2_control.xacro
