<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_2f_gripper_hardware</name>
  <version>0.0.0</version>
  <description>ROS2 hardware package for the Robotiq 2-Finger 140mm gripper</description>
  <maintainer email="jannis.haberhausen@agile-robots.de">jannis.haberhausen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robotiq_2f_gripper_interfaces</depend>
  <depend>robotiq_2f_gripper_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <!-- ROS 2 Control Dependencies -->
  <depend>controller_manager</depend>
  <depend>gripper_controllers</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>hardware_interface</depend>
  <depend>robotiq_2f_gripper_description</depend>

  <!-- Execution dependencies for launch files -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
